2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/FileService.cs: AbsoluteToRelativePath gives back . if
	  the paths are the same.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.FileSystem/DefaultFileSystemExtension.cs,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/FileEventArgs.cs,
	  MonoDevelop.Core/FileService.cs: Rewrote/Refactored FileService (it's
	  now under MIT), removed some unneccessary/unused methods.

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/StringParserService.cs: Renamed some variables in the
	  stringparser service.

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/ServiceManager.cs,
	  MonoDevelop.Core/StringParserService.cs: StringParserService is now a
	  singleton and re-wrote under MIT.

2007-10-03  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/NativePlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/MintPlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/MonoPlatformExecutionHandler.cs,
	  MonoDevelop.Core.Execution/IExecutionHandler.cs: Allow setting
	  environment variables when processes via an IExecutionHandler.
	* MonoDevelop.Core.Execution/ProcessService.cs: Allow setting environment
	  variables when starting console processes.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.mdp: Fix warning level.
	* MonoDevelop.Core/Properties.cs: When getting the value of a property, if
	  it is a LazyXmlDeserializer, deserialize it and store the deserialized
	  value in the internal dictionary. In this way the next time the property
	  is requested, the same object will be returned, insted of deserializing
	  the data every time.

2007-09-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/PropertyService.cs: In SaveProperties, create the
	  configuration path if it doesn't exist.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 
